Style button and add footer

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
 				<div>
 					<span class="label-input100">Result:</span>
 					<div>
-						<textarea
+						<textarea class="input100" style="min-height: 7em"
 						id="to"
 						placeholder="Moreu, E., & Azcona, D. (2019). 1001 ways to disable Adblock. In 2019 Top Website (pp. 951--958)"
 						value=""></textarea>
 					</div>
 					<span class="focus-input100"></span>
 					<div> <!-- class="tooltip" -->
-						<button onclick="copyFunction()" onmouseout="outFunc()">
+						<button class="copy-button" onclick="copyFunction()" onmouseout="outFunc()">
 							<!-- <span class="tooltiptext" id="myTooltip">Copy to clipboard</span> -->
-							Copy text
+							Copy text!
 						</button>
 					</div>
 				</div>
 
 				
-
+				<p class="footer">Made with ❤️ by <a style="font-weight: bold" href="https://enricmor.eu">Enric </a> and <a style="font-weight: bold" href="https://computing.dcu.ie/~dazcona/">David</a></p>
 			</form>
 
 		</div>
