--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <!--===============================================================================================-->
 <link rel="stylesheet" type="text/css" href="css/copy.css">
+
+<!-- Don't remove this! -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-1148226566858552",
+    enable_page_level_ads: true
+  });
+</script>
+
 </head>
 <body>
 
