--- a/index.html
+++ b/index.html
@@ -437,6 +437,17 @@
 
 	</script>
 
+	<script type="text/javascript" id="cookieinfo" 
+		src="//cookieinfoscript.com/js/cookieinfo.min.js"
+		data-message="Cookies🍪? We eat them, but we also use them to track visits to our website, we store no personal details. By continuing to visit this site you agree to our use of cookies. "
+		data-bg="#c4c4c4"
+		data-fg="#000000"
+		data-link="#000000"
+		data-divlinkbg="#595959"
+		data-cookie="CookieInfoScript"
+		data-close-text="🍪👍"
+		data-font-family="Poppins-Medium">
+	</script>
 </body>
 
 </html>
