Cookie policy link

--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
 		data-bg="#c4c4c4"
 		data-fg="#000000"
 		data-link="#000000"
+		data-moreinfo="https://lmgtfy.com/?q=HTTP+cookie&t=w&iie=1"
 		data-divlinkbg="#595959"
 		data-cookie="CookieInfoScript"
 		data-close-text="🍪👍"
